--- a/examples/common.css
+++ b/examples/common.css
@@ -39,22 +39,19 @@
   -webkit-align-items: flex-start;
   -webkit-box-pack: start;
   -ms-flex-align: start;
-  -webkit-box-align: start;
-          align-items: flex-start;
+  align-items: flex-start;
 }
 .alignItemsCenter {
   -webkit-align-items: center;
   -webkit-box-pack: center;
   -ms-flex-align: center;
-  -webkit-box-align: center;
-          align-items: center;
+  align-items: center;
 }
 .alignItemsEnd {
   -webkit-align-items: flex-end;
   -webkit-box-pack: end;
   -ms-flex-align: end;
-  -webkit-box-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
 }
 .hf {
   display: -webkit-box;
@@ -65,9 +62,7 @@
   -webkit-flex-flow: row;
   -moz-flex-flow: row;
   -ms-flex-flow: row;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-          flex-flow: row;
+  flex-flow: row;
 }
 .vf {
   display: -webkit-box;
@@ -78,9 +73,7 @@
   -webkit-flex-flow: column;
   -moz-flex-flow: column;
   -ms-flex-flow: column;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-flow: column;
+  flex-flow: column;
 }
 .wf {
   display: -webkit-box;
@@ -97,36 +90,31 @@
   -webkit-flex: 1;
   -moz-flex: 1;
   -ms-flex: 1;
-  -webkit-box-flex: 1;
-          flex: 1;
+  flex: 1;
 }
 .f2 {
   -webkit-flex: 2;
   -moz-flex: 2;
   -ms-flex: 2;
-  -webkit-box-flex: 2;
-          flex: 2;
+  flex: 2;
 }
 .f3 {
   -webkit-flex: 3;
   -moz-flex: 3;
   -ms-flex: 3;
-  -webkit-box-flex: 3;
-          flex: 3;
+  flex: 3;
 }
 .f4 {
   -webkit-flex: 4;
   -moz-flex: 4;
   -ms-flex: 4;
-  -webkit-box-flex: 4;
-          flex: 4;
+  flex: 4;
 }
 .f5 {
   -webkit-flex: 5;
   -moz-flex: 5;
   -ms-flex: 5;
-  -webkit-box-flex: 5;
-          flex: 5;
+  flex: 5;
 }
 .js {
   display: -webkit-box;
@@ -192,8 +180,7 @@
   -webkit-align-items: flex-start;
   -webkit-box-pack: start;
   -ms-flex-align: start;
-  -webkit-box-align: start;
-          align-items: flex-start;
+  align-items: flex-start;
 }
 .ac {
   display: -webkit-box;
@@ -204,8 +191,7 @@
   -webkit-align-items: center;
   -webkit-box-pack: center;
   -ms-flex-align: center;
-  -webkit-box-align: center;
-          align-items: center;
+  align-items: center;
 }
 .ae {
   display: -webkit-box;
@@ -216,8 +202,228 @@
   -webkit-align-items: flex-end;
   -webkit-box-pack: end;
   -ms-flex-align: end;
-  -webkit-box-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
+}
+.bd {
+  border: 1px solid #ddd;
+}
+.bdl {
+  border-left: 1px solid #ddd;
+}
+.bdr {
+  border-right: 1px solid #ddd;
+}
+.bdt {
+  border-top: 1px solid #ddd;
+}
+.bdb {
+  border-bottom: 1px solid #ddd;
+}
+.display-flex {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+.justifyContentStart {
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+.justifyContentCenter {
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.justifyContentEnd {
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+.justifyContentAround {
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+}
+.justifyContentBetween {
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.alignItemsStart {
+  -webkit-align-items: flex-start;
+  -webkit-box-pack: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+}
+.alignItemsCenter {
+  -webkit-align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.alignItemsEnd {
+  -webkit-align-items: flex-end;
+  -webkit-box-pack: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+}
+.hf {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row;
+  -moz-flex-flow: row;
+  -ms-flex-flow: row;
+  flex-flow: row;
+}
+.vf {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column;
+  -moz-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+}
+.wf {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: wrap;
+  -moz-flex-flow: wrap;
+  -ms-flex-flow: wrap;
+  flex-flow: wrap;
+}
+.f1 {
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+.f2 {
+  -webkit-flex: 2;
+  -moz-flex: 2;
+  -ms-flex: 2;
+  flex: 2;
+}
+.f3 {
+  -webkit-flex: 3;
+  -moz-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
+}
+.f4 {
+  -webkit-flex: 4;
+  -moz-flex: 4;
+  -ms-flex: 4;
+  flex: 4;
+}
+.f5 {
+  -webkit-flex: 5;
+  -moz-flex: 5;
+  -ms-flex: 5;
+  flex: 5;
+}
+.js {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+.jc {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.je {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+.ja {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+}
+.jb {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.as {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: flex-start;
+  -webkit-box-pack: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+}
+.ac {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.ae {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: flex-end;
+  -webkit-box-pack: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
 }
 .bd {
   border: 1px solid #ddd;
@@ -320,6 +526,75 @@
   40% {
     transform: scale(1);
     -webkit-transform: scale(1);
+  }
+}
+/* Make clicks pass-through */
+#nprogress {
+  pointer-events: none;
+}
+#nprogress .bar {
+  background: #29d;
+  position: fixed;
+  z-index: 1531;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+}
+/* Fancy blur effect */
+#nprogress .peg {
+  display: block;
+  position: absolute;
+  right: 0px;
+  width: 100px;
+  height: 100%;
+  box-shadow: 0 0 10px #29d, 0 0 5px #29d;
+  opacity: 1.0;
+  -webkit-transform: rotate(3deg) translate(0px, -4px);
+  -ms-transform: rotate(3deg) translate(0px, -4px);
+  transform: rotate(3deg) translate(0px, -4px);
+}
+/* Remove these to get rid of the spinner */
+#nprogress .spinner {
+  display: block;
+  position: fixed;
+  z-index: 1531;
+  top: 15px;
+  right: 15px;
+}
+#nprogress .spinner-icon {
+  width: 18px;
+  height: 18px;
+  box-sizing: border-box;
+  border: solid 2px transparent;
+  border-top-color: #29d;
+  border-left-color: #29d;
+  border-radius: 50%;
+  -webkit-animation: nprogress-spinner 400ms linear infinite;
+  animation: nprogress-spinner 400ms linear infinite;
+}
+.nprogress-custom-parent {
+  overflow: hidden;
+  position: relative;
+}
+.nprogress-custom-parent #nprogress .spinner,
+.nprogress-custom-parent #nprogress .bar {
+  position: absolute;
+}
+@-webkit-keyframes nprogress-spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes nprogress-spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 
